--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ install:
     - pip install -U pip
     - pip install .[test,dev]
 
-script: python setup.py test
+script: 
+    - python setup.py test
+    - pylint simple_wbd tests
 
 after_success:
     - codecov
