Clear coverage results before each test run

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [aliases]
-test=nosetests --with-coverage --cover-package=simple_wbd
+test=nosetests --with-coverage --cover-package=simple_wbd --cover-erase
 
 [metadata]
 description-file = README.rst
